src/objects/Data_Tracking_Project__c.object
<CustomObject>
    <description>Data Tracking Project for 2012 Summer Interns</description>
    <fields>
        <fullName>Account_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have all accounts checks been completed?</description>
        <inlineHelpText>Have all accounts checks been completed?</inlineHelpText>
        <label>Account Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_ID_Notes__c</fullName>
        <description>Enter notes for Account ID field</description>
        <inlineHelpText>Enter notes for Account ID field</inlineHelpText>
        <label>Account ID Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <description>Account ID Picklist</description>
        <inlineHelpText>Enter status of Account ID</inlineHelpText>
        <label>Account ID</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Notes__c</fullName>
        <description>Enter notes for Account field</description>
        <inlineHelpText>Account Notes</inlineHelpText>
        <label>Account Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Field</description>
        <inlineHelpText>Project Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Data Tracking Projects</relationshipLabel>
        <relationshipName>Data_Tracking_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Notes__c</fullName>
        <description>Enter notes for Address field</description>
        <inlineHelpText>Enter notes for Address field</inlineHelpText>
        <label>Address Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>Property Address</description>
        <inlineHelpText>Enter status of Property Address</inlineHelpText>
        <label>Address</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attachment_Installed_System_Notes__c</fullName>
        <description>Enter notes for Attachment Installed System field</description>
        <inlineHelpText>Enter notes for Attachment Installed System field</inlineHelpText>
        <label>Attachment Installed System Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Installed_System__c</fullName>
        <description>Jpeg Attachment to Installed System</description>
        <inlineHelpText>Enter status of Attachment Installed System</inlineHelpText>
        <label>Attachment Installed System</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Notes__c</fullName>
        <description>Enter notes for Billing Address field</description>
        <inlineHelpText>Enter notes for Billing Address field</inlineHelpText>
        <label>Billing Address Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <description>Billing Address Picklist</description>
        <inlineHelpText>Enter status of Billing Address</inlineHelpText>
        <label>Billing Address</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CB_Panel_Notes__c</fullName>
        <description>Enter notes for CB Panel field</description>
        <inlineHelpText>Enter notes for CB Panel field</inlineHelpText>
        <label>CB Panel Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Panel__c</fullName>
        <description>Property CB Panel</description>
        <inlineHelpText>Enter status of Property CB Panel</inlineHelpText>
        <label>CB Panel</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Checked_by_Ben1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has this field been checked by Ben?</description>
        <inlineHelpText>Has this field been checked by Ben?</inlineHelpText>
        <label>Checked by Ben</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checked_by_Ben3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has this field been checked by Ben?</description>
        <inlineHelpText>Has this field been checked by Ben?</inlineHelpText>
        <label>Checked by Ben</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checked_by_Ben4__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has this field been checked by Ben?</description>
        <inlineHelpText>Has this field been checked by Ben?</inlineHelpText>
        <label>Checked by Ben</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checked_by_Michelle1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has this field been checked by Michelle?</description>
        <inlineHelpText>Has this field been checked by Michelle?</inlineHelpText>
        <label>Checked by Michelle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checked_by_Michelle2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has this field been checked by Michelle?</description>
        <inlineHelpText>Has this field been checked by Michelle?</inlineHelpText>
        <label>Checked by Michelle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checked_by_Michelle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has this field been checked by Michelle?</description>
        <inlineHelpText>Has this field been checked by Michelle?</inlineHelpText>
        <label>Checked by Michelle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checked_by_Sandy10__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has this field been checked by Sandy?</description>
        <inlineHelpText>Has this field been checked by Sandy?</inlineHelpText>
        <label>Checked by Sandy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checked_by_Sandy1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has this field been checked by Sandy?</description>
        <inlineHelpText>Has this field been checked by Sandy?</inlineHelpText>
        <label>Checked by Sandy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checked_by_Sandy2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has this field been checked by Sandy?</description>
        <inlineHelpText>Has this field been checked by Sandy?</inlineHelpText>
        <label>Checked by Sandy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Notes__c</fullName>
        <description>Enter notes for Contact field</description>
        <inlineHelpText>Enter notes for Contact field</inlineHelpText>
        <label>Contact Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role_Contract_Notes__c</fullName>
        <description>Enter notes for Contact Role: Contract field</description>
        <inlineHelpText>Enter notes for Contact Role: Contract field</inlineHelpText>
        <label>Contact Role: Contract Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role_Contract__c</fullName>
        <description>Contact Role for Contract</description>
        <inlineHelpText>Enter status of Contract Contact Role</inlineHelpText>
        <label>Contact Role: Contract</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Role_Enphase_Notes__c</fullName>
        <description>Enter notes for Contact Role: Enphase field</description>
        <inlineHelpText>Enter notes for Contact Role: Enphase field</inlineHelpText>
        <label>Contact Role: Enphase Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role_Grant_Notes__c</fullName>
        <description>Enter notes for Contact Role: Grant field</description>
        <inlineHelpText>Enter notes for Contact Role: Grant field</inlineHelpText>
        <label>Contact Role: Grant Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role_Grant__c</fullName>
        <description>Contact Role for Grants</description>
        <inlineHelpText>Enter status of Contact Role for Grants (Check Grant App)</inlineHelpText>
        <label>Contact Role: Grant</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Role_SREC_Contract_Notes__c</fullName>
        <description>Enter notes for Contact Role: SREC Contracts field</description>
        <inlineHelpText>Enter notes for Contact Role: SREC Contracts field</inlineHelpText>
        <label>Contact Role: SREC Contract Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role_SREC_Contract__c</fullName>
        <description>Contact Role for SREC Contract</description>
        <inlineHelpText>Enter status of Contact Role for SREC Contract</inlineHelpText>
        <label>Contact Role: SREC Contract</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <description>Contact Role for Enphase</description>
        <inlineHelpText>Enter status of Enphase Contact Role (Check Enphase Email address.)</inlineHelpText>
        <label>Contact Role: Enphase</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Is Contact mixed?</description>
        <inlineHelpText>Check if Contact is mixed (husband and wife in one)</inlineHelpText>
        <label>Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Matches_SO_Notes__c</fullName>
        <description>Enter notes for Contract Matches SO field</description>
        <inlineHelpText>Enter notes for Contract Matches SO field</inlineHelpText>
        <label>Contract Matches SO Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Matches_SO__c</fullName>
        <description>Contract Matches Sales Order?</description>
        <inlineHelpText>Enter status of &apos;Contract Matches Sales Order?&apos;</inlineHelpText>
        <label>Contract Matches SO</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Uploaded_Notes__c</fullName>
        <description>Enter notes for Contract Uploaded field</description>
        <inlineHelpText>Enter notes for Contract Uploaded field</inlineHelpText>
        <label>Contract Uploaded Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Uploaded__c</fullName>
        <description>Sales Order Contract Uploaded?</description>
        <inlineHelpText>Enter status of Contract Uploaded</inlineHelpText>
        <label>Contract Uploaded</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enphase_ID_Notes__c</fullName>
        <description>Enter notes for Enphase ID field</description>
        <inlineHelpText>Enter notes for Enphase ID field</inlineHelpText>
        <label>Enphase ID Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enphase_ID__c</fullName>
        <description>Enphase ID</description>
        <inlineHelpText>Enter status of Enphase ID</inlineHelpText>
        <label>Enphase ID</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Generation_Start_Date_Notes__c</fullName>
        <description>Enter notes for Generation Start Date field</description>
        <inlineHelpText>Enter notes for Generation Start Date field</inlineHelpText>
        <label>Generation Start Date Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generation_Start_Date__c</fullName>
        <description>Generation Start Date</description>
        <inlineHelpText>Enter status of Generation Start Date</inlineHelpText>
        <label>Generation Start Date</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inspection_Date_Notes__c</fullName>
        <description>Enter notes for Inspection Date field</description>
        <inlineHelpText>Enter notes for Inspection Date field</inlineHelpText>
        <label>Inspection Date Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inspection_Date__c</fullName>
        <description>Project Inspection Date</description>
        <inlineHelpText>Enter status of Inspection Date</inlineHelpText>
        <label>Inspection Date</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Install_Locations_Notes__c</fullName>
        <description>Enter notes for Install Locations field</description>
        <inlineHelpText>Enter notes for Install Locations field</inlineHelpText>
        <label>Install Locations Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Locations__c</fullName>
        <description>Property Install Locations</description>
        <inlineHelpText>Enter Status of Install Locations</inlineHelpText>
        <label>Install Locations</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installation_Date_Notes__c</fullName>
        <description>Enter notes for Installation Date field</description>
        <inlineHelpText>Enter notes for Installation Date field</inlineHelpText>
        <label>Installation Date Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Date__c</fullName>
        <description>Project Installation Date</description>
        <inlineHelpText>Enter status of Installation Date</inlineHelpText>
        <label>Installation Date</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installed_Inverter_Notes__c</fullName>
        <description>Enter notes for Installed Inverter field</description>
        <inlineHelpText>Enter notes for Installed Inverter field</inlineHelpText>
        <label>Installed Inverter Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installed_Inverter__c</fullName>
        <description>Inverter Serial Numbers</description>
        <inlineHelpText>Inverter Serial Numbers</inlineHelpText>
        <label>Installed Inverter</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installed_Panel_Notes__c</fullName>
        <description>Enter notes for Installed Panel field</description>
        <inlineHelpText>Enter notes for Installed Panel field</inlineHelpText>
        <label>Installed Panel Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installed_Panel__c</fullName>
        <description>Panel Serial Numbers (Leased systems only)</description>
        <inlineHelpText>Panel Serial Numbers (Leased systems only)</inlineHelpText>
        <label>Installed Panel</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installed_System_Notes__c</fullName>
        <description>Enter notes for Installed System field</description>
        <inlineHelpText>Enter notes for Installed System field</inlineHelpText>
        <label>Installed System Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installed_System_Picklist_Notes__c</fullName>
        <description>Enter notes for Installed System Picklist field</description>
        <inlineHelpText>Enter notes for Installed System Picklist field</inlineHelpText>
        <label>Installed System Picklist Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installed_System_Picklist__c</fullName>
        <description>Picklist for Installed System</description>
        <inlineHelpText>Enter status of Installed System</inlineHelpText>
        <label>Installed System Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installed_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Data Tracking Project Installed System</description>
        <inlineHelpText>Data Tracking Project Installed System</inlineHelpText>
        <label>Installed System</label>
        <referenceTo>Installed_System__c</referenceTo>
        <relationshipLabel>Data Tracking Projects</relationshipLabel>
        <relationshipName>Data_Tracking_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inverter_Serial_Numbers_Notes__c</fullName>
        <description>Enter notes for Inverter Serial Numbers field</description>
        <inlineHelpText>Enter notes for Inverter Serial Numbers field</inlineHelpText>
        <label>Inverter Serial Numbers Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Serial_Numbers__c</fullName>
        <description>Inverter Serial Numbers</description>
        <inlineHelpText>Enter status of Inverter Serial Numbers</inlineHelpText>
        <label>Inverter Serial Numbers</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Jpeg_Uploaded_Notes__c</fullName>
        <description>Enter notes for Jpeg Uploaded field</description>
        <inlineHelpText>Enter notes for Jpeg Uploaded field</inlineHelpText>
        <label>Jpeg Uploaded Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jpeg_Uploaded__c</fullName>
        <description>jpeg attached to SD?</description>
        <inlineHelpText>jpeg attached to SD?</inlineHelpText>
        <label>Jpeg Uploaded</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Multiple_Contact_Roles_Notes__c</fullName>
        <description>Enter notes for Multiple Contract Roles field</description>
        <inlineHelpText>Enter notes for Multiple Contract Roles field</inlineHelpText>
        <label>Multiple Contact Roles Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiple_Contact_Roles__c</fullName>
        <description>Two names signed contract/grant app/Enphase/SREC, but only one contact in SF</description>
        <inlineHelpText>Two names signed contract/grant app/Enphase/SREC, but only one contact in SF</inlineHelpText>
        <label>Multiple Contact Roles?</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_Notes__c</fullName>
        <description>Enter notes for Name field</description>
        <inlineHelpText>Enter notes for Name field</inlineHelpText>
        <label>Name Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>